@@ -32,7 +32,6 @@
 #include <stdint.h>
 
 #include "sr620.h"
-#include "units.h"
 #include "gpib.h"
 #include "util.h"
 
